--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       This is a simple plain-HTML website on GitLab Pages, without any fancy static site generator.
     </p>
     <p>
-      Branch : Master
+      Branch : Feature_beranda
     </p>
   </body>
 </html>
