--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,10 @@
     <h1>Hello World!</h1>
 
     <p>
-      This is a simple plain-HTML website on GitLab Pages, without any fancy static site generator.
+      Source code ini diambil dari branch feature_menu
     </p>
     <p>
-      Branch : Master
+      Branch : feature_menu
     </p>
   </body>
 </html>
