--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,10 @@
     <h1>Hello World!</h1>
 
     <p>
-      Source code ini diambil dari branch feature_menu
+      Halo Semuanya. Ini adalah simulasi gitflow kita
     </p>
     <p>
-      Branch : dari feature_admin
+      Dari Branch master ke feature_a
     </p>
   </body>
 </html>
