--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       Halo Semuanya. Ini adalah simulasi gitflow kita
     </p>
     <p>
-      Dari Branch master ke feature_a
+      Fitur Baru sudah siap
     </p>
   </body>
 </html>
